@@ -1,14 +1,19 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.489 2005/11/20 22:11:33 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.490 2005/11/22 03:19:46 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
-  20 Nov 2005; Preston Cody <codeman@gentoo.org>
+  21 Nov 2005; Preston Cody <codeman@gentoo.org>
+	initial adding of boot_device to backend.
+	
+	20 Nov 2005; Preston Cody <codeman@gentoo.org>
   converted gli-dialog to use the install_package_list.
   gtkfe has already been converted by AllanonJL
   new way working in gli-dialog now and added to webgli.
+  added set/get_boot_device() to IP
+  
   
   19 Nov 2005; Preston Cody <codeman@gentoo.org>
   get_install_package_list added to InstallProfile.  This can be used by the FEs
